src/test/java/testfiles/invalid/semanticErr/generic_list/newlistWrongAssign.wacc
# basic list declaration and assignment

# Output:
# #empty#

# Exit:
# 200

# Program:

begin
  int a = newlist()
end
